prod/order-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-api
 
spec:
  selector:
    app: order-api
 
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
